--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 	<meta name="description" content="Source code generated using layoutit.com">
 	<meta name="author" content="LayoutIt!">
 	<link href="css/bootstrap.css" rel="stylesheet">
-	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
 </head>
 
@@ -21,7 +20,7 @@
 		<div class="row">
 			<div class="col-md-12">
 				<div class="row">
-					<div class="col-md-3">
+					<div class="col-md-4">
 					</div>
 					<div class="col-md-4">
 						<img alt="Bootstrap Image Preview" src="images/lineuicut7_05.png">
@@ -34,7 +33,12 @@
 					<div class="col-md-2">
 					</div>
 					<div class="col-md-8">
-						<img src = "images/lineuicut7_10.png">
+						<button type="button" class="btn btn-link"><img width="100" height="50" src="images/button_1.png"></button>
+						<button type="button" class="btn btn-link"><img width="100" height="50" src="images/button_2.png"></button>
+						<button type="button" class="btn btn-link"><img width="100" height="50" src="images/button_3.png"></button>
+						<button type="button" class="btn btn-link"><img width="100" height="50" src="images/button_4.png"></button>
+						<button type="button" class="btn btn-link"><img width="100" height="50" src="images/button_5.png"></button>
+						<button type="button" class="btn btn-link"><img width="100" height="50" src="images/button_6.png"></button>
 						<div class="row">
 							<div class="col-md-12">
 								<h3>
@@ -43,9 +47,8 @@
 							</div>
 						</div>
 						<div class="row">
-							<div class="big">
 								<div class="col-md-8">
-									<div class="allbig">
+	
 										<div class="carousel slide " id="carousel-397178">
 											<ol class="carousel-indicators">
 												<li data-slide-to="0" data-target="#carousel-397178" class="active">
@@ -81,15 +84,28 @@
 												<span class="sr-only">Next</span>
 											</a>
 										</div>
-									</div>
-								</div>
 
-								<div class="col-md-2">
-								
 								</div>
-							</div>
+								<div class="col-md-3">
+										<button type="button" class="btn btn-success btn-block btn-lg">
+												北區
+											</button>
+											<button type="button" class="btn btn-success btn-block btn-lg">
+												中區
+												</button>
+												<button type="button" class="btn btn-success btn-block btn-lg">
+													南區
+													</button>
+													<button type="button" class="btn btn-success btn-block btn-lg">
+													 東區
+														</button>
+														<button type="button" class="btn btn-success btn-block btn-lg">
+													專區
+															</button>
+								</div>
+							
 						</div>
-						<div class="col-md-2">
+						<div class="col-md-1">
 						</div>
 					</div>
 				</div>
@@ -101,12 +117,12 @@
 					<div class="col-md-3">
 					</div>
 					<div class="col-md-5">
-						<img src="images/b1.png">
-						<img src="images/b2.png">
-						<img src="images/b3.png">
-						<img src="images/b4.png">
-						<img src="images/b5.png">
-						<img src="images/b6.png">
+						<a href="index.html"><img src="images/b1.png"></a>
+						<a href="index.html"><img src="images/b2.png"></a>
+						<a href="index.html"><img src="images/b3.png"></a>
+						<a href="http://cip.fju.edu.tw/cip/" target="_blank"><img src="images/b4.png"></a>
+						<a href="index.html"><img src="images/b5.png"></a>
+						<a href="https://mata.moe.edu.tw/" target="_blank"><img src="images/b6.png"></a>
 					</div>
 
 					<div class="col-md-4">
@@ -118,11 +134,11 @@
 					</div>
 
 					<div class="col-md-9">
-						<img src="images/fb.png">
+						<a href="https://www.facebook.com/irahominokay/" target="_blank"><img src="images/fb.png"></a>
 
-						<img src="images/ig.png">
+						<a href="https://www.instagram.com/yuliirahu/?hl=zh-tw&fbclid=IwAR3mlzfhqlXtuwkiqbiU4wZgCvsuMINTj3eKObtLiw7CHkWYfveLF1ewIV0" target="_blank"><img src="images/ig.png"></a>
 
-						<img src="images/line.png">
+						<a href="line://ti/p/@irahu" target="_blank"><img src="images/line.png"></a>
 
 						<img src="images/find.png">
 					</div>
